Reworked initialization